24-Mar-2016 Issue #174. Classes deriving C.LinkerTool now requires the overload of the new abstract method, GetLibraryPath, accepting a C.CModule argument.

24-Mar-2016 Fixes #178. Added Bam.Core.ExecuteReasoning.EReason.DeferredEvaluation, and utility function Bam.Core.ExecuteReasoning.DeferredUntilBuild, which can be used to identify modules that must defer their evaluation until after the build starts, e.g. those modules that rely on part of the build to generate their data. It is up to the policy writers of the build mode to handle deferred evaluation.

23-Mar-2016 Fixes #174. Added C.ProceduralHeaderFileFromToolOutput module, requiring a module implementing Bam.Core.ICommandLineTool, whose stdout is captured and used as the contents of the generated header file. Supported in all build modes.

23-Mar-2016 The CommandLineProcessor.Execute overload taking an executable path, now defaults to no command line arguments.

23-Mar-2016 Fixes #175. Bam now throws different exceptions to distinguish between a package with no modules defined, a package used as master but no modules are buildable (i.e. their classes are sealed), and when buildable modules fail to be instantiated.

23-Mar-2016 Fixes #166. Python test harness has a new option, --C.bitdepth, which can be 32 or 64, to limit build tests for those bitdepths. If no option is specified, then 32 and 64-bit builds will be tested, where supported.

23-Mar-2016 Fixes #148. Circular module references now result in an exception being thrown.

23-Mar-2016 Fixes #113. Speculative fix to synchronization issue with a multithreaded Xcode build seen just once.

23-Mar-2016 Fixes #103. Adding a dependent package using bam and the command line option, --adddependent, now validates that the package both exists (in the current list of package repositories in the definition file), and that there is no ambiguity over which version of a package was intended.
