@@ -40,8 +40,7 @@ namespace C
             Bam.Core.TokenizedString executablePath,
             System.Collections.ObjectModel.ReadOnlyCollection<Bam.Core.Module> objectFiles,
             System.Collections.ObjectModel.ReadOnlyCollection<Bam.Core.Module> headers,
-            System.Collections.ObjectModel.ReadOnlyCollection<Bam.Core.Module> libraries,
-            System.Collections.ObjectModel.ReadOnlyCollection<Bam.Core.Module> frameworks)
+            System.Collections.ObjectModel.ReadOnlyCollection<Bam.Core.Module> libraries)
         {
             // any libraries added prior to here, need to be moved to the end
             // they are external dependencies, and thus all built modules (to be added now) may have
