@@ -60,8 +60,7 @@ namespace C
             Bam.Core.TokenizedString executablePath,
             System.Collections.ObjectModel.ReadOnlyCollection<Bam.Core.Module> objectFiles,
             System.Collections.ObjectModel.ReadOnlyCollection<Bam.Core.Module> headers,
-            System.Collections.ObjectModel.ReadOnlyCollection<Bam.Core.Module> libraries,
-            System.Collections.ObjectModel.ReadOnlyCollection<Bam.Core.Module> frameworks)
+            System.Collections.ObjectModel.ReadOnlyCollection<Bam.Core.Module> libraries)
         {
             if (0 == objectFiles.Count)
             {
