@@ -1,3 +1,5 @@
+24-Mar-2016 Fixes #179. Removed the 'frameworks' argument from the C.ILinkingPolicy.Link function, as it is never used. Passing OSX frameworks to the linker is performed via the setting in C.ICommonLinkerSettingsOSX.
+
 24-Mar-2016 Issue #174. Classes deriving C.LinkerTool now requires the overload of the new abstract method, GetLibraryPath, accepting a C.CModule argument.
 
 24-Mar-2016 Fixes #178. Added Bam.Core.ExecuteReasoning.EReason.DeferredEvaluation, and utility function Bam.Core.ExecuteReasoning.DeferredUntilBuild, which can be used to identify modules that must defer their evaluation until after the build starts, e.g. those modules that rely on part of the build to generate their data. It is up to the policy writers of the build mode to handle deferred evaluation.
